List inbox mails

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,18 +1,18 @@
-<h1>Mail</h1>
+<h1 class="mb-3">Mail</h1>
 
-<table class="table table hover table-striped">
-  <thead>
-    <tr>
-      <th>#</th>
-      <th>Subject</th>
-      <th>Received at</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>1</td>
-      <td>-</td>
-      <td>__/__/____</td>
-    </tr>
-  </tbody>
-</table>
+<div class="position-relative">
+  <div id="spinner-table" class="d-none">
+    <p class="m-0"><i class="fad fa-spinner-third fa-spin mr-2"></i> Fething mails...</p>
+  </div>
+  <table id="mails" class="table table hover table-striped">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>Subject</th>
+        <th>Received at</th>
+      </tr>
+    </thead>
+    <tbody>
+    </tbody>
+  </table>
+</div>
