Option to list unread messages; Divided list of mails between Gmail and Outlook

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,6 +5,10 @@
     <title><%= "#{SITE_NAME}#{!!@page_title ? " | #{@page_title}" : ""}" %></title>
     <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
     <link rel="stylesheet" href="/stylesheets/font-awesome.min.css">
+    <link rel="stylesheet" href="/stylesheets/dataTables.bootstrap4.min.css">
+    <link rel="stylesheet" href="/stylesheets/DataTables/jquery.dataTables.min.css">
+    <link rel="stylesheet" href="/stylesheets/DataTables/responsive.dataTables.min.css">
+
     <link rel="stylesheet" href="/stylesheets/style.css">
   </head>
   <body>
@@ -22,7 +26,12 @@
     <script src="/javascripts/jquery-3.4.1.min.js"></script>
     <script src="/javascripts/popper.js"></script>
     <script src="/javascripts/bootstrap.min.js"></script>
-    <script src="/javascripts/mail.js"></script>
+    <script src="/javascripts/DataTables/jquery.dataTables.min.js"></script>
+    <script src="/javascripts/DataTables/dataTables.dataTables.min.js"></script>
+    <script src="/javascripts/DataTables/dataTables.responsive.min.js"></script>
+    <script src="/javascripts/DataTables/responsive.dataTables.min.js"></script>
+    <script src="/javascripts/dataTables.bootstrap4.js"></script>
+    <script src="/javascripts/gmail_mail_interceptor.js"></script>
     <script src="/javascripts/custom.js"></script>
   </body>
 </html>
