--- a/views/index.erb
+++ b/views/index.erb
@@ -1,18 +1,94 @@
 <h1 class="mb-3">Mail</h1>
 
-<div class="position-relative">
-  <div id="spinner-table" class="d-none">
-    <p class="m-0"><i class="fad fa-spinner-third fa-spin mr-2"></i> Fething mails...</p>
+<ul class="nav nav-tabs" id="myTab" role="tablist">
+  <li class="nav-item">
+    <a
+      class="nav-link active"
+      id="gmail-tab"
+      data-toggle="tab"
+      href="#gmail"
+      role="tab"
+      aria-controls="gmail"
+      aria-selected="true">
+      GMAIL
+    </a>
+  </li>
+  <li class="nav-item">
+    <a
+      class="nav-link"
+      id="outlook-tab"
+      data-toggle="tab"
+      href="#outlook"
+      role="tab"
+      aria-controls="outlook"
+      aria-selected="false">
+      OUTLOOK
+    </a>
+  </li>
+</ul>
+
+<div class="tab-content">
+  <div
+    id="gmail"
+    class="tab-pane fade show active position-relative p-3"
+    role="tabpanel"
+    aria-labelledby="gmail-tab">
+    <div id="gmail-spinner-table" class="spinner-table d-none">
+      <p class="m-0"><i class="fad fa-spinner-third fa-spin mr-2"></i> Fetching mails...</p>
+    </div>
+
+    <div id="gmail-filters" class="d-none align-items-center justify-content-between mb-3">
+      <span class="font-weight-bold">
+        Filtros:
+      </span>
+
+      <div class="d-flex align-items-center justify-content-between flex-wrap">
+        <div class="form-group mb-lg-0 mr-lg-3 mb-md-2">
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text">
+                From
+              </span>
+            </div>
+            <input
+              type="text"
+              id="gmail-from"
+              class="form-control"
+              placeholder="someuser@example.com" />
+          </div>
+        </div>
+
+        <div class="form-check mb-lg-0 mb-md-2">
+          <input class="form-check-input" type="checkbox" value="is:unread" id="gmail-is-unread">
+          <label class="form-check-label" for="gmail-is-unread">
+            Just messages unread!
+          </label>
+        </div>
+      </div>
+
+      <button type="button" id="filter-gmail-mails" class="btn btn-primary">
+        Filtrar
+      </button>
+    </div>
+
+    <table id="gmail-mails" class="table table hover table-striped">
+      <thead>
+        <tr>
+          <th>Identifier</th>
+          <th>Subject</th>
+          <th>Sender</th>
+          <th>Received at</th>
+        </tr>
+      </thead>
+      <tbody>
+      </tbody>
+    </table>
   </div>
-  <table id="mails" class="table table hover table-striped">
-    <thead>
-      <tr>
-        <th>#</th>
-        <th>Subject</th>
-        <th>Received at</th>
-      </tr>
-    </thead>
-    <tbody>
-    </tbody>
-  </table>
+
+  <div
+    id="outlook"
+    class="tab-pane fade position-relative p-3"
+    role="tabpanel"
+    aria-labelledby="outlook-tab">
+  </div>
 </div>
