--- a/views/index.erb
+++ b/views/index.erb
@@ -10,6 +10,8 @@
       role="tab"
       aria-controls="gmail"
       aria-selected="true">
+      <i id="fetching-gmail" class="fad fa-spinner fa-spin text-info d-none"></i>
+      <i id="fetched-gmail" class="fad fa-check text-success d-none"></i>
       GMAIL
     </a>
   </li>
@@ -22,6 +24,8 @@
       role="tab"
       aria-controls="outlook"
       aria-selected="false">
+      <i id="fetching-outlook" class="fad fa-spinner fa-spin text-info d-none"></i>
+      <i id="fetched-outlook" class="fad fa-check text-success d-none"></i>
       OUTLOOK
     </a>
   </li>
@@ -90,5 +94,67 @@
     class="tab-pane fade position-relative p-3"
     role="tabpanel"
     aria-labelledby="outlook-tab">
+    <% if @session[:azure_token] %>
+      <small><%= @session[:azure_token] %></small>
+
+      <div id="outlook-spinner-table" class="spinner-table d-none">
+        <p class="m-0"><i class="fad fa-spinner-third fa-spin mr-2"></i> Fetching mails...</p>
+      </div>
+
+      <div id="outlook-filters" class="d-none align-items-center justify-content-between mb-3">
+        <span class="font-weight-bold">
+          Filtros:
+        </span>
+
+        <div class="d-flex align-items-center justify-content-between flex-wrap">
+          <div class="form-group mb-lg-0 mr-lg-3 mb-md-2">
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text">
+                  From
+                </span>
+              </div>
+              <input
+                type="text"
+                id="outlook-from"
+                class="form-control"
+                placeholder="someuser@example.com" />
+            </div>
+          </div>
+
+          <div class="form-check mb-lg-0 mb-md-2">
+            <input class="form-check-input" type="checkbox" value="is:unread" id="outlook-is-unread">
+            <label class="form-check-label" for="outlook-is-unread">
+              Just messages unread!
+            </label>
+          </div>
+        </div>
+
+        <button type="button" id="filter-outlook-mails" class="btn btn-primary">
+          Filtrar
+        </button>
+      </div>
+
+      <table id="outlook-mails" class="table table hover table-striped">
+        <thead>
+          <tr>
+            <th>Identifier</th>
+            <th>Subject</th>
+            <th>Sender</th>
+            <th>Received at</th>
+          </tr>
+        </thead>
+        <tbody>
+        </tbody>
+      </table>
+    <% else %>
+      <a
+        id="connect-button"
+        class="btn btn-lg btn-primary"
+        href="<%= @outlook_login_url %>"
+        role="button">
+        Connect to Outlook
+      </a>
+    <% end %>
   </div>
 </div>
